manifests/rss/miniflux.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: rss
  labels:
    app: miniflux
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: miniflux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: rss
  labels:
    app: miniflux
  annotations:
    secret.reloader.stakater.com/reload: "miniflux"
    configmap.reloader.stakater.com/reload: "miniflux"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
      - name: web
        image: ghcr.io/miniflux/miniflux:2.3.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: rss
  labels:
    app: miniflux
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - miniflux.cluster.fun
    secretName: miniflux-ingress
  rules:
  - host: miniflux.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: miniflux
            port:
              number: 80

---
