manifests/rss/rss.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-new
  namespace: rss
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    name: web
  selector:
    app: rss
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss
  namespace: rss
  labels:
    app: rss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rss
  template:
    metadata:
      labels:
        app: rss
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
      - args:
        - --cookie-secure=false
        - --provider=oidc
        - --provider-display-name=Auth0
        - --upstream=http://localhost:8080
        - --http-address=$(HOST_IP):8000
        - --redirect-url=https://rss.cluster.fun/oauth2/callback
        - --email-domain=marcusnoble.co.uk
        - --pass-basic-auth=false
        - --pass-access-token=false
        - --oidc-issuer-url=https://marcusnoble.eu.auth0.com/
        - --cookie-secret=KDGD6rrK6cBmryyZ4wcJ9xAUNW9AQN
        image: quay.io/oauth2-proxy/oauth2-proxy:v5.1.1
        name: oauth-proxy
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            memory: 50Mi
          requests:
            memory: 50Mi
      - name: web
        image: harbor.cluster.fun/averagemarcus/gopherss:latest
        ports:
        - containerPort: 8080
          name: web
        resources:
          limits:
            memory: 308Mi
          requests:
            memory: 308Mi
        volumeMounts:
          - mountPath: /data
            name: storage
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 100Mi
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: rss-db
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rss
  namespace: rss
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rss.cluster.fun
    secretName: rss-ingress
  rules:
  - host: rss.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rss-new
            port:
              number: 80

---
